--- a/app/index.jade
+++ b/app/index.jade
@@ -18,14 +18,14 @@ head
   meta(name='viewport', content='width=device-width')     
   link(rel='shortcut icon', href='/favicon.ico')
   
-  // build:css(.) styles/vendor.css
+  // build:css styles/main.css
+  link(rel='stylesheet' href='styles/main.css')
+  // endbuild
+
+  // build:css styles/vendor.css
   // bower:css
   link(rel='stylesheet', href='/bower_components/semantic/dist/semantic.css')
   // endbower
-  // endbuild
-
-  // build:css(.) styles/main.css
-  link(rel='stylesheet' href='styles/main.css')
   // endbuild
 
   body.pushable
@@ -70,13 +70,13 @@ head
             .hidden.content links
             .visible.content: i.linkify.icon
     
-    // build:js(.) scripts/vendor.js
+    // build:js scripts/vendor.js
     // bower:js
     script(src='/bower_components/jquery/dist/jquery.js')
     script(src='/bower_components/semantic/dist/semantic.js')
     // endbower
     // endbuild
     
-    // build:js(.) scripts/main.js
+    // build:js scripts/main.js
     script(src='scripts/main.js')
     // endbuild
